# kipper

./: .gitignore  CNAME  README.md  index.html  pyproject.toml
.github/workflows/: publish.yaml
ipper/: main.py
ipper/common/: constants.py  utils.py  wiki.py
ipper/flink/: wiki.py
ipper/kafka/: mailing_list.py  main.py  output.py  wiki.py
kipper/: mailing_list.py  main.py  output.py  wiki.py
templates/: flink-index.html  index.html  index.html.jinja  kafka-index.html.jinja
