[tool.poetry]
name = "ipper"
version = "0.2.0"
description = ""
authors = ["Thomas Cooper <code@tomcooper.dev>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
beautifulsoup4 = "^4.10.0"
pandas = "^2.2.3"
Jinja2 = "^3.1.4"

[tool.poetry.dev-dependencies]
ipython = "^8.29.0"
pylint = "^3.3.3"
black = "^24.10.0"
mypy = "^1.14.0"
types-requests = "^2.32.0.20241016"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
